--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,22 @@
 aiogram~=2.14
 environs~=8.0.0
-
 asyncpg~=0.27.0
 openpyxl~=3.1.2
 python-dotenv~=1.0.0
 packaging~=23.1
+Django~=3.2.8
+pip~=24.1
+attrs~=23.2.0
+wheel~=0.43.0
+pytz~=2024.1
+idna~=3.7
+multidict~=6.0.5
+Babel~=2.9.1
+setuptools~=70.0.0
+aiohttp~=3.8.6
+certifi~=2024.6.2
+yarl~=1.9.4
+typing_extensions~=4.12.2
+aiosignal~=1.3.1
+frozenlist~=1.4.1
+marshmallow~=3.21.3
