--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ asyncpg~=0.27.0
 openpyxl~=3.1.2
 python-dotenv~=1.0.0
 packaging~=23.1
-Django~=3.2.8
 pip~=24.1
 attrs~=23.2.0
 wheel~=0.43.0
@@ -13,10 +12,12 @@ idna~=3.7
 multidict~=6.0.5
 Babel~=2.9.1
 setuptools~=70.0.0
-aiohttp~=3.8.6
+aiohttp~=3.9.2
 certifi~=2024.6.2
 yarl~=1.9.4
 typing_extensions~=4.12.2
 aiosignal~=1.3.1
 frozenlist~=1.4.1
 marshmallow~=3.21.3
+Django==5.0.6
+django-adminlte3==0.1.6
